# ddshark

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.config/: nextest.toml
docs/: architecture.md
docs/audits/: 001-traffic-and-decode-audit.md
docs/design/: test-harness.md
docs/issues/: 001-unbounded-alloc-in-parameter-list-decode.md  002-hardcoded-pl-cdr-le-representation-id.md  003-panic-on-unknown-guid-prefix.md  004-ip-defrag-no-dedup-overlap.md  005-fragmented-message-stat-miscount.md  006-packet-count-is-submessage-count.md  007-destination-fallback-misattribution.md  008-gap-logic-disabled.md  009-ip-defrag-buffer-unbounded.md  010-rtps-fragmessages-unbounded.md  011-silent-drop-on-congestion.md  012-serial-updater-bottleneck.md  013-tui-holds-state-lock-full-frame.md  014-metrics-latency-rwlock-hot-path.md  015-per-event-allocations.md
docs/phases/: 001-cargo-deps-update.md  002-harden-decode-path.md  003-fix-traffic-accounting.md  004-bound-memory-and-backpressure.md  005-reduce-pipeline-contention.md  006-test-harness.md
src/: batch_updater.rs  capabilities.rs  config.rs  dds.rs  lib.rs  lockfree_state.rs  logger.rs  main.rs  message.rs  metrics.rs  metrics_logger.rs  opts.rs  otlp.rs  otlp_metrics.rs  qos.rs  ring_buffer.rs  rtps.rs  rtps_watcher.rs  state.rs  state_adapter.rs  state_cleanup.rs  ui.rs  updater.rs  utils.rs
src/rtps/: packet_decoder.rs  packet_iter.rs  packet_source.rs  packet_stream.rs  watcher.rs
src/ui/: tab_abnormality.rs  tab_entity.rs  tab_participant.rs  tab_reader.rs  tab_stat.rs  tab_topic.rs  tab_writer.rs  value.rs  xtable.rs
src/utils/: defrag_buf.rs  entity_id.rs  entity_kind.rs  guid.rs  guid_prefix.rs  locator.rs  mod.rs  timed_stat.rs  vec.rs
tests/: replay_pcap.rs
