[package]
name = "cddstop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.5", features = ["derive"] }
crossterm = "0.26.1"
cyclors = "0.1.7"
derivative = "2.2.0"
flume = "0.10.14"
futures = "0.3.28"
hex = "0.4.3"
itertools = "0.10.5"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tui = "0.19.0"
# zenoh-plugin-dds = { git = "https://github.com/eclipse-zenoh/zenoh-plugin-dds.git", rev = "6945047bc1fa4481e1dbcc615a5897a15614feeb" }

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.96"
