[package]
name = "ddshark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
crossterm = "0.26.1"
# cyclors = "0.1.7"
# cyclors = { path = "cyclors", features = ["unstable-api"] }
derivative = "2.2.0"
flume = "0.10.14"
futures = "0.3.28"
hex = "0.4.3"
itertools = "0.11.0"
serde = { version = "1.0.173", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
# zenoh-plugin-dds = { git = "https://github.com/eclipse-zenoh/zenoh-plugin-dds.git", rev = "6945047bc1fa4481e1dbcc615a5897a15614feeb" }
rustdds = { path = "RustDDS" }
pcap = "1.1.0"
speedy = "0.8.6"
bytes = "1.4.0"
cdr = "0.2.4"
# rust-lapper = "1.1.0"
smoltcp = "0.10.0"
etherparse = "0.13.0"
tonic = "0.9.2"
opentelemetry = "0.19.0"
opentelemetry_api = { version = "0.19.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.11.0"
libc = "0.2"
gethostname = "0.4.3"
mac_address = "1.1.5"
intrusive-collections = "0.9.5"
ratatui = "0.22.0"
tracing-subscriber = "0.3.17"

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.103"
