[package]
name = "ddshark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
clap = { version = "4.3.17", features = ["derive"] }
crossterm = "0.26.1"
flume = "0.10.14"
hex = "0.4.3"
itertools = "0.11.0"
serde = { version = "1.0.173", features = ["derive"] }
tracing = "0.1.37"
rustdds = { path = "RustDDS" }
pcap = { version = "1.1.0", features = ["capture-stream"] }
bytes = "1.4.0"
etherparse = "0.13.0"
opentelemetry = "0.19.0"
opentelemetry_api = { version = "0.19.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = "0.11.0"
libc = "0.2"
gethostname = "0.4.3"
mac_address = "1.1.5"
ratatui = "0.22.0"
tracing-subscriber = "0.3.17"
rbtree-defrag-buffer = "0.1.0"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
futures = "0.3.29"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.10"
ctrlc = "3.4.1"
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-queue = "0.3"
arc-swap = "1.6"

[dev-dependencies]
